<resources>
    <string name="nutrition">Nutrition</string>
    <string name="menstrual_cycle">Menstrual cycle</string>
    <string name="medication">Medication</string>
    <string name="memory">Memory</string>
    <string name="pedometer">Pedometer</string>
    <string name="heart_rate">Heart rate</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_add">add</string>
    <string name="dialog_confirm">confirm</string>
    <string name="language_settings_title">Change language</string>
    <string name="english_card">English</string>
    <string name="spanish_card">Español</string>
    <string name="font_size_message">Font size saved successfully to</string>
    <string name="font_size_settings_title">Change font size</string>
    <string name="placeholder_title">Title placeholder</string>
    <string name="placeholder_text">Lore ipsum blablablablablabla</string>
    <string name="placeholder_button">OK</string>
    <string name="small_text_seekbar">SMALL</string>
    <string name="medium_text_seekbar">MEDIUM</string>
    <string name="large_text_seekbar">LARGE</string>
    <string name="contrast_settings_title">Change contrast</string>
    <string name="theme_settings_title">Change color theme</string>
    <string name="fix_contrast">Fix high contrast</string>
    <string name="vibration">Enable haptic feedback</string>
    <string name="sound">Enable sound feedback</string>
    <string name="automatic_speech_recognition">Automatic speech recognition</string>
    <string name="Main_Title">Can I Health You?</string>
    <string name="Main_NutritionCard">Nutrition</string>
    <string name="Main_MenstrualCard">Menstrual Cycle</string>
    <string name="Main_MedicationCard">Medication</string>
    <string name="Main_MemoryCard">Memory</string>
    <string name="Main_PedometerCard">Pedometer</string>
    <string name="Main_HeartRateCard">Heart rate</string>
    <string name="Nutrition_Diet">Diet</string>
    <string name="Nutrition_Recipes">Recipes</string>
    <string name="Calendar_AddButton">Add meal</string>
    <string name="Calendar_Error">Cannot insert the same meal</string>
    <string name="Calendar_SnackbarText">Item deleted successfully</string>
    <string name="Calendar_SnackbarUndo">UNDO</string>
    <string name="NewMeal_Title">Add meal</string>
    <string name="NewMeal_TitleEdit">Edit meal</string>
    <string name="NewMeal_Description">Description</string>
    <string name="NewMeal_ErrorDescription">Please, introduce something in the description</string>
    <string name="NewMeal_SelectRecipeButton">Select recipe</string>
    <string name="NewMeal_ErrorDescriptionNoChange">You haven\'t done any change</string>
    <string name="SelectRecipeDialog_Title">Select recipe</string>
    <string name="Recipes_SnackbarText">Recipe deleted successfully</string>
    <string name="Recipes_SnackbarUndo">UNDO</string>
    <string name="Recipes_ApproxTime">Approx. time:</string>
    <string name="Recipes_Paella_Name">Paella</string>
    <string name="Recipes_Paella_ApproxTime">1h 15min</string>
    <string name="Recipes_Lentils_Name">Lentils</string>
    <string name="Recipes_Lentils_ApproxTime">50min</string>
    <string name="Recipes_SpongeCake_Name">Sponge cake</string>
    <string name="Recipes_SpongeCake_ApproxTime">1h</string>
    <string name="Recipes_SearchHint">Search recipe&#8230;</string>
    <string name="Recipes_ImportRecipe">Import recipe</string>
    <string name="Recipes_AddRecipe">Add recipe</string>
    <string name="RecipeDetails_ActivityTitle">Recipe details</string>
    <string name="RecipeDetails_IngredientsTitle">Required ingredients</string>
    <string name="RecipeDetails_StepsTitle">STEPS</string>
    <string name="Ingredient_Gram">gram</string>
    <string name="Ingredient_Unit">unit</string>
    <string name="Ingredient_Milliliter">milliliter</string>
    <string name="Ingredient_Grams">grams</string>
    <string name="Ingredient_Units">units</string>
    <string name="Ingredient_Milliliters">milliliters</string>
    <string name="Step_Seconds">sec</string>
    <string name="Step_CannotPlayUntilCheckedIngredients">Cannot play the steps until all ingredients are checked</string>
    <string name="Step_PreviousNotAllowed">You cannot skip to the previous step, as this is the first one</string>
    <string name="Step_NextNotAllowed">You cannot skip to the next step, as this is the last one</string>
    <string name="TTS_Settings_Title">Adjust Text-To-Speech parameters</string>
    <string name="TTS_Settings_Pitch">PITCH</string>
    <string name="TTS_Settings_Speed">SPEED</string>
    <string name="TTS_Settings_PlaceholderText">The European languages are members of the same family. Their separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary.</string>
    <string name="TTS_Settings_Button">Try&#8230;</string>
    <string name="Medication_Quantity">QUANTITY</string>
    <string name="Medication_Schedule">SCHEDULE</string>
    <string name="Medication_Pill">PILL</string>
    <string name="Medication_Effervescent">EFFERVESCENT</string>
    <string name="Medication_PowderPacket">POWDER PACKET</string>
    <string name="ibuprofeno_name">Ibuprofen</string>
    <string name="ibuprofeno_description">Reduces the inflammation</string>
    <string name="paracetamol_name">Paracetamol</string>
    <string name="paracetamol_description">Lowers fever and decreases pain</string>
    <string name="aspirin_name">Aspirin</string>
    <string name="aspirin_description">Pain reliever for minor aches and pains and to reduce fever. It is also an anti-inflammatory drug and can be used as a blood thinner.</string>
    <string name="Medication_notification_take">Take</string>
    <string name="Medication_ErrorMessage">That medication already exists!</string>
    <string name="Medication_NotificationCreated">Created daily notifications!</string>
    <string name="Medication_NotificationRemoved">Notifications have been disabled</string>
    <string name="Medication_NotificationsEnabled">Enable notifications</string>
    <string name="Medication_NotificationDisabled">Disable notifications</string>
    <string name="Medication_AddMedication">Add medication</string>
    <string name="Medication_NotificationsAlreadyEnabled">Notifications have already been enabled</string>
    <string name="Medication_NotificationsAlreadyDisabled">Notifications have already been disabled</string>
    <string name="of">of</string>
    <string name="at">at</string>
    <string name="Medication_NotificationsEnabledTextView">NOTIFICATIONS ENABLED</string>
    <string name="RemoveMedication_Title">Remove medication</string>
    <string name="RemoveMedication_Message">You are about to remove the medication. Are you sure?</string>
    <string name="NewMedication_Title">Add medication</string>
    <string name="NewMedication_Name">Name</string>
    <string name="NewMedication_Description">Description</string>
    <string name="NewMedication_PillRadioButton">PILL</string>
    <string name="NewMedication_EffervescentRadioButton">EFFERVESCENT</string>
    <string name="NewMedication_PowderPacketRadioButton">POWDER PACKET</string>
    <string name="NewMedication_ErrorSchedule">"Please, select at least one hour as the schedule"</string>
    <string name="NewMedication_NameMandatory">Name is mandatory</string>
    <string name="NewMedication_RepeatedHour">You cannot insert the same time more than once</string>
    <string name="Memory_Up">UP</string>
    <string name="Memory_Down">DOWN</string>
    <string name="Memory_Left">LEFT</string>
    <string name="Memory_Right">RIGHT</string>
    <string name="Pedometer_ErrorDialog">Step sensor not found. Pedometer cannot be launched.</string>
    <string name="Pedometer_StepText">Steps:</string>
    <string name="Pedometer_StepsLastReboot">This is the number of steps walked since the last reboot</string>
    <string name="Pedometer_StepsLastReboot2">Hence, according to your height</string>
    <string name="Pedometer_StepsLastReboot3">you have walked</string>
    <string name="Pedometer_StepsLastReboot4">That\'s an average of</string>
    <string name="Pedometer_StepsLastReboot5">per day.</string>
    <string name="Pedometer_ChangeHeight">CHANGE HEIGHT</string>
    <string name="Pedometer_HintHeight">Introduce your height in cm</string>
    <string name="Pedometer_IntegerError">Please, introduce an integer number</string>
    <string name="Pedometer_EmptyError">Please, introduce a number</string>
    <string name="Pedometer_HeightChanged">Your height has been changed to</string>
    <string name="HeartRate_BPM">HEART RATE (BPM)</string>
    <string name="HeartRate_FingerMessage">Please, place your finger on both the camera and the flash</string>
    <string name="drawMenu_Nutrition">Nutrition</string>
    <string name="drawMenu_MenstrualCycle">Menstrual Cycle</string>
    <string name="drawMenu_Medication">Medication</string>
    <string name="drawMenu_Memory">Memory</string>
    <string name="drawMenu_Pedometer">Pedometer</string>
    <string name="drawMenu_HeartRate">Heart Rate</string>
    <string name="drawMenu_Settings">Settings</string>
    <string name="drawMenu_About">About</string>
    <string name="paella_ingredient1" translatable="false">Olive oil</string>
    <string name="paella_ingredient2" translatable="false">Paprika</string>
    <string name="paella_ingredient3" translatable="false">Dried oregano</string>
    <string name="paella_ingredient4" translatable="false">Boneless chiccken breats</string>
    <string name="paella_ingredient5" translatable="false">Garlic</string>
    <string name="paella_ingredient6" translatable="false">Crushed red pepper</string>
    <string name="paella_ingredient7" translatable="false">Rice</string>
    <string name="paella_ingredient8" translatable="false">Saffron threads</string>
    <string name="paella_ingredient9" translatable="false">Bay leafs</string>
    <string name="paella_ingredient10" translatable="false">Lemon</string>
    <string name="paella_ingredient11" translatable="false">Onion</string>
    <string name="paella_step1" translatable="false">In a medium bowl, mix together 2 tablespoons olive oil, paprika, oregano, salt and pepper.</string>
    <string name="paella_step2" translatable="false">Heat 2 tablespoons olive oil in a large skillet or paella pan over medium heat. Stir in garlic, red pepper, and rice. Cook, stirring, to coat rice with oil, about 3 minutes.</string>
    <string name="paella_step3" translatable="false">Stir in saffron threads, bay leaf, garlic, chicken stock, and lemon zest. Bring to a boil, cover, and reduce heat to medium low. Simmer 20 minutes.</string>
    <string name="paella_step4" translatable="false">Meanwhile, heat 2 tablespoons olive oil in a separate skillet over medium heat. Stir in marinated chicken and onion and cook 5 minutes.</string>
    <string name="paella_step5" translatable="false">Spread rice onto a serving tray. Top with meat mixture.</string>
    <string name="lentils_ingredient1" translatable="false">Fried tomato</string>
    <string name="lentils_ingredient2" translatable="false">Uncooked celery</string>
    <string name="lentils_ingredient3" translatable="false">Green pepeer</string>
    <string name="lentils_ingredient4" translatable="false">Carrot</string>
    <string name="lentils_ingredient5" translatable="false">Green bean</string>
    <string name="lentils_ingredient6" translatable="false">Olive oil</string>
    <string name="lentils_ingredient7" translatable="false">Bay leafs</string>
    <string name="lentils_ingredient8" translatable="false">Garlic</string>
    <string name="lentils_ingredient9" translatable="false">Pumpkin</string>
    <string name="lentils_ingredient10" translatable="false">Uncooked courgette</string>
</resources>