<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tts_placeholder_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TTS_Settings_PlaceholderText"
        android:textColor="?textColor"
        android:textSize="?textAppearanceButton"
        android:layout_marginBottom="32dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TTS_Settings_Pitch"
        android:textColor="?textColor"
        android:textSize="?textAppearanceText" />

    <SeekBar
        android:id="@+id/seek_bar_pitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/seek_thumb"
        android:progress="50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TTS_Settings_Speed"
        android:textColor="?textColor"
        android:textSize="?textAppearanceText" />

    <SeekBar
        android:id="@+id/seek_bar_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/seek_thumb"
        android:progress="50" />

    <Button
        android:id="@+id/try_tts_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:textSize="?textAppearanceButton"
        android:text="@string/TTS_Settings_Button"/>

</LinearLayout>