<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/medication_name_layout">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/medication_name_textinputlayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:hint="@string/NewMedication_Name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/medication_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="?textColor"
                android:textSize="?textAppearanceText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/take_medication_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:cardElevation="6dp"
            app:cardCornerRadius="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="3dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera_alt_black_48dp" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/added_medication_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_check_document_96"
            android:tint="@android:color/holo_green_dark"
            android:visibility="invisible"/>
    </LinearLayout>
    

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/medication_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NewMedication_Description"
        android:layout_below="@id/medication_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/medication_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textColor="?textColor"
            android:maxLines="2"
            android:textSize="?textAppearanceText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/medication_quantity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/medication_description_layout"
        android:paddingTop="@dimen/activity_vertical_margin">
        <Spinner
            android:id="@+id/medication_quantity_spinner"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            style=""/>
        <RadioGroup
            android:id="@+id/medication_quantity_radio_group"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">
            <RadioButton
                android:id="@+id/medication_quantity_pill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NewMedication_PillRadioButton"
                android:textColor="?textColor"
                android:textSize="?textAppearanceText"/>
            <RadioButton
                android:id="@+id/medication_quantity_effervescent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?textColor"
                android:text="@string/NewMedication_EffervescentRadioButton"
                android:textSize="?textAppearanceText"/>
            <RadioButton
                android:id="@+id/medication_quantity_powder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?textColor"
                android:text="@string/NewMedication_PowderPacketRadioButton"
                android:textSize="?textAppearanceText"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/medication_quantity_layout">
        <androidx.cardview.widget.CardView
            android:id="@+id/take_medication_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:cardElevation="5dp"
            app:cardCornerRadius="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_watch_later_black_48dp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/medication_schedule_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="?textAppearanceTitle"
            android:textColor="?textColor"
            android:layout_gravity="center_vertical"
            tools:text="18:00"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/remove_medication_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:cardElevation="5dp"
            app:cardCornerRadius="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="3dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_red_36dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>